<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUserActivity"
    android:padding="20dp"
    android:background="#B1B1B1 ">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_email"
                android:textColor="@color/colorLblText" />

            <EditText
                android:id="@+id/txtEmailRegisterUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/style_register_user"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_password"
                android:textColor="@color/colorLblText" />

            <EditText
                android:id="@+id/txtPasswordRegisterUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/style_register_user"
                android:ems="10"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_password2"
                android:textColor="@color/colorLblText" />

            <EditText
                android:id="@+id/txtPasswordRegisterUserRepeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/style_register_user"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBtnRegister"
                android:onClick="btn_register"
                android:text="@string/btn_register"
                android:textColor="@color/colorLblText" />

            <Button
                android:id="@+id/btn_go_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBtnRegister"
                android:onClick="btn_go_login"
                android:text="@string/btn_login"
                android:textColor="@color/colorLblText" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>