<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/panther"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <EditText
                android:id="@+id/EmailUserLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/style_login"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hnt_email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorHint"
                android:textColor="@color/colorHint"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/PasswordUserLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:background="@drawable/style_login"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/hnt_pw"
                android:inputType="textPassword"
                android:textColorHint="@color/colorHint"
                android:textColor="@color/colorHint"
                android:textSize="20sp" />

            <Button
                android:id="@+id/SignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/style_login"
                android:onClick="btn_login"
                android:text="@string/btn_login"
                android:textColor="@color/colorBtnLogin" />

            <Button
                android:id="@+id/Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_login"
                android:onClick="btn_go_register"
                android:text="@string/btn_register"
                android:textColor="@color/colorBtnLogin" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>